[project]
name = "acangatu"
version = "0.1.0"
description = "InMemory registry manager proof-of-concept"
authors = [
    {name = "Luiz Cavalcanti",email = "cavalcanti.luiz@gmail.com"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.10"
package-mode = false
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
